--- a/Automation/jenkinsfile
+++ b/Automation/jenkinsfile
@@ -1,15 +1,28 @@
 def BUILD = "$BUILD_NUMBER"
 def IMAGE_REPO = "maheshgprasad/express_app"
-def SERVICE = "express_web"
+def SERVICE = "b-safe-web"
 def HOST_TO_CONTAINER_PORT = "80:3000"
-def PRJ_NAME = "project-aetna"
+def PRJ_NAME = "aetna-b-safe"
 pipeline {
     agent any
 
     stages {
         stage('Git Checkout') {
             steps {
-                checkout([$class: 'GitSCM', branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: 'jenkins_git_auth', url: 'https://github.com/maheshgprasad/project-aetna.git/']]])
+                lean Workspace before Checkout
+                cleanWs()
+                it Checkout
+                checkout([$class: 'GitSCM', branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: 'jenkins_git_auth', url: 'https:ithub.com/maheshgprasad/project-aetna.git/']]])
+            }
+        }
+        stage('NPM Install') {
+            steps {
+                dir('./Application') {
+                    script {
+                        sh "npm install"
+                    }
+                }
+                
             }
         }
         stage('Docker Image Build') {
@@ -24,7 +37,7 @@ pipeline {
             steps {
                 script {
                     sh "docker run -d -p ${HOST_TO_CONTAINER_PORT} --name ${PRJ_NAME} ${IMAGE_REPO}:v${BUILD}"
-                    sh "sleep 2s" //allows some time for the container to be ready to receive any requests
+                    sh "sleep 5s" llows some time for the container to be ready to receive any requests
                 }
             }
         }
@@ -62,7 +75,7 @@ pipeline {
         }
         // stage('Update Service') {
         //     steps {
-        //         sh "docker service update --image $IMAGE_REPO:$BUILD $SERVICE"
+        //         sh "ansible-playbook deployment.yaml -e 'container_name="" service_name="b-safe-service" ' "
         //     }
         // }
 
