--- a/Automation/jenkinsfile
+++ b/Automation/jenkinsfile
@@ -3,6 +3,7 @@ def IMAGE_REPO = "maheshgprasad/express_app"
 def SERVICE = "b-safe-web"
 def HOST_TO_CONTAINER_PORT = "80:3000"
 def PRJ_NAME = "aetna-b-safe"
+def STACK_NAME = "bee-safe"
 pipeline {
     agent any
 
